--- a/hotel.skolavdf/index.css
+++ b/hotel.skolavdf/index.css
@@ -14,7 +14,7 @@ p {
 }
 
 .title {
-  background-color: aqua;
+  background-color: rgb(0, 175, 146);
   height: 50px;
   text-align: center;
   margin-top: 20px;
